Fix css, it was flex-wrap, should be flex-flow

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -116,7 +116,7 @@ header {
 /* SOBRE NÓS */
 .aboutSection {
     display: flex;
-    flex-wrap: row nowrap;
+    flex-flow: row nowrap;
     justify-content: flex-start;
     align-items: flex-start;
 
@@ -139,7 +139,7 @@ header {
 /* CONTATO */
 .formContainer {
     /* display: flex; */
-    /* flex-wrap: column nowrap; */
+    /* flex-flow: column nowrap; */
     justify-content: flex-start;
     align-items: flex-start;
 
@@ -153,14 +153,14 @@ header {
 
 .formBody {
     display: flex;
-    flex-wrap: column nowrap;
+    flex-flow: column nowrap;
     justify-content: flex-start;
     align-items: flex-start;
 }
 
 .formArea {
     display: flex;
-    flex-wrap: column nowrap;
+    flex-flow: column nowrap;
     justify-content: flex-start;
     align-items: flex-start;
 }
@@ -174,13 +174,13 @@ header {
 details {
     display: flex;
     /* children are not inline */
-    flex-wrap: row wrap;
+    flex-flow: row wrap;
     justify-content: space-evenly;
     align-items: stretch;
 }
 .detailsContainer {
     display: flex;
-    flex-wrap: row nowrap;
+    flex-flow: row nowrap;
     flex-grow: 3;
     width: 40%;
     background-color: #fff;
